--- a/506_group_project.Rmd
+++ b/506_group_project.Rmd
@@ -6,8 +6,11 @@ output: html_document
 ---
 
 ##Topic Introduction
-Beijing's air pollution poses a big threat to the health of local residents. The PM 2.5 Index 
-has been known as an important indication of the air quality. Exploring an effective way of predicting PM 2.5 Index will be an important step towards addressing the pollution. However, various factors such as dew point, temperature, pressure, etc. may influence PM 2.5 and the relationship between them remains unclear. Thus, it is challenging to accurately predict PM 2.5. To address this problem, linear mixed effects model is adopted to predict the response variable (ie. air quality) based on the numerous explanatory variables (meteorological records).
+Beijing's air pollution poses a big threat to the health of local residents. 
+The PM 2.5 Index has been known as an important indication of the air quality. 
+Exploring an effective way of predicting PM 2.5 Index will be an important step towards addressing the pollution. 
+However, various factors such as dew point, temperature, pressure, etc. may influence PM 2.5 and the relationship between them remains unclear. 
+Thus, it is challenging to accurately predict PM 2.5. To address this problem, linear mixed effects model is adopted to predict the response variable (ie. air quality) based on the numerous explanatory variables (meteorological records).
 
 ```{r setup, include=FALSE}
 library(knitr)
@@ -26,7 +29,12 @@ knitr::include_graphics("image.png")
 
 
 ##Model Introduction
-Ecological and meteorological data are often complex and messy because of the inclusion of grouping factors like gender, population, continents, and seasons. When fitting a complicated models with many parameters and observations, the data points might not be truly independent from each other. For example, all observations from a meterological dataset could be collected on the same site. Therefore, mixed models were developed to overcome such problem and let us to be able to use all of our data. Mixed models are applied in many disciplines where multiple correlated measurements are made on each unit of interest. The core of mixed model is that it incorporates fixed and random effects. The difference between fixed and random effects is that a fixed effect is an effect that is constant for a given population, but a random effect is an effect that varies for a given population.
+Ecological and meteorological data are often complex and messy because of the inclusion of grouping factors like gender, population, continents, and seasons. 
+When fitting a complicated models with many parameters and observations, the data points might not be truly independent from each other.
+For example, all observations from a meterological dataset could be collected on the same site. 
+Therefore, mixed models were developed to overcome such problem and let us to be able to use all of our data. Mixed models are applied in many disciplines where multiple correlated measurements are made on each unit of interest.
+The core of mixed model is that it incorporates fixed and random effects. The difference between fixed and random effects is that a fixed effect is an effect that is constant for a given population, 
+but a random effect is an effect that varies for a given population.
 
 A typical linear regression model takes the form $$y = X\beta+\epsilon$$ where $X$ is the fixed effects with coefficients $\beta$. $\epsilon$ corresponds to random noise, $\epsilon \sim  \mathcal{N}(0,I)$.
 
