--- a/506_group_project.Rmd
+++ b/506_group_project.Rmd
@@ -359,15 +359,13 @@ In addition, the method chosen from **REML** and **ML**(options in the two funct
 1.[UCLA: Introduction to Linear Mixed Models - IDRE Stats](https://stats.idre.ucla.edu/other/mult-pkg/introduction-to-linear-mixed-models/)
 
 
-2.[Standford University: Section Week 8 - Linear Mixed Models](https://web.stanford.edu/class/psych252/section/Mixed_models_tutorial.html)
+2.[Standford University: Section Week 8 - Linear Mixed Models(https://web.stanford.edu/class/psych252/section/Mixed_models_tutorial.html)
 
-3.[ETH Zürich: Linear Mixed-Effects Models]
-(https://stat.ethz.ch/R-manual/R-devel/library/nlme/html/lme.html)
+3.[ETH Zürich: Linear Mixed-Effects Models](https://stat.ethz.ch/R-manual/R-devel/library/nlme/html/lme.html)
 
 4.[Gabriela K Hajduk: Introduction to linear mixed models](https://ourcodingclub.github.io/2017/03/15/mixed-models.html?fbclid=IwAR0txmdRYH7OK6nfg1DRnHD9WDEcgcbBkGtGZlw2cTEC_yjnRMb0FsiL22U#FERE)
 
-5.[Wikipedia: Mixed Model]
-(https://en.wikipedia.org/wiki/Mixed_model)
+5.[Wikipedia: Mixed Model](https://en.wikipedia.org/wiki/Mixed_model)
 
-6.[Jianhua Wang et al, 'Effects of Meteorological Conditions on PM2.5 Concentrations in
-Nagasaki, Japan', J.Environ, Res. Public Health 2015,12, p.9]
+6.Jianhua Wang et al, 'Effects of Meteorological Conditions on PM2.5 Concentrations in
+Nagasaki, Japan', J.Environ, Res. Public Health 2015,12, p.9
